--- a/gen_path.ipynb
+++ b/gen_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "\n",
     "for i in range(1,21):\n",
     "    # Cell to interact with the user\n",
-    "    directory = 'mlsimdata_npy/mlsimdata'+str(i)\n",
+    "    directory = 'data_collection/mlsimdata_npy2/mlsimdata'+str(i)\n",
     "    # Get all file paths\n",
     "    file_paths = find_all_files(directory)\n",
     "\n",
