incorporate density field in the data

--- a/gen_path.ipynb
+++ b/gen_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,17 @@
       "All file paths have been saved to mlsimdata17.csv\n",
       "All file paths have been saved to mlsimdata18.csv\n",
       "All file paths have been saved to mlsimdata19.csv\n",
-      "All file paths have been saved to mlsimdata20.csv\n"
+      "All file paths have been saved to mlsimdata20.csv\n",
+      "All file paths have been saved to mlsimdata21.csv\n",
+      "All file paths have been saved to mlsimdata22.csv\n",
+      "All file paths have been saved to mlsimdata23.csv\n",
+      "All file paths have been saved to mlsimdata24.csv\n",
+      "All file paths have been saved to mlsimdata25.csv\n",
+      "All file paths have been saved to mlsimdata26.csv\n",
+      "All file paths have been saved to mlsimdata27.csv\n",
+      "All file paths have been saved to mlsimdata28.csv\n",
+      "All file paths have been saved to mlsimdata29.csv\n",
+      "All file paths have been saved to mlsimdata30.csv\n"
      ]
     }
    ],
@@ -53,9 +63,9 @@
     "        for path in file_paths:\n",
     "            writer.writerow([path])\n",
     "\n",
-    "for i in range(1,21):\n",
+    "for i in range(1,31):\n",
     "    # Cell to interact with the user\n",
-    "    directory = 'data_collection/mlsimdata_npy2/mlsimdata'+str(i)\n",
+    "    directory = 'fastpm-master/mlsim/data_collection/mlsimdata_npy2_density/mlsimdata'+str(i)\n",
     "    # Get all file paths\n",
     "    file_paths = find_all_files(directory)\n",
     "\n",
@@ -70,14 +80,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "# Function to find all files in a directory and its subdirectories\n",
+    "def find_all_files(directory):\n",
+    "    file_paths = []\n",
+    "    for root, dirs, files in os.walk(directory):\n",
+    "        for file in files:\n",
+    "            full_path = os.path.join(root, file)\n",
+    "            file_paths.append(full_path)\n",
+    "    return file_paths\n",
+    "\n",
+    "# Function to save file paths to a CSV file\n",
+    "def save_to_csv(file_paths, csv_filename):\n",
+    "    with open(csv_filename, mode='w', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        writer.writerow(['file_path'])  # Header for the CSV file\n",
+    "        for path in file_paths:\n",
+    "            writer.writerow([path])\n",
+    "\n",
+    "\n",
+    "# Cell to interact with the user\n",
+    "name=\"Om05\"\n",
+    "directory = 'data_collection/mlsimdata_npy2/mlsimdata'+name\n",
+    "# Get all file paths\n",
+    "file_paths = find_all_files(directory)\n",
+    "\n",
+    "# Specify the output CSV file\n",
+    "train_csv_filename = \"mlsimdata\"+name+\"train.csv\"\n",
+    "\n",
+    "test_csv_filename = \"mlsimdata\"+name+\"test.csv\"\n",
+    "# Save the file paths to the CSV file\n",
+    "save_to_csv(file_paths[0:900], train_csv_filename)\n",
+    "save_to_csv(file_paths[900:], test_csv_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined CSV saved to combined_file_paths.csv\n"
+      "Combined CSV saved to density.csv\n"
      ]
     }
    ],
@@ -104,11 +156,11 @@
     "    combined_df.to_csv(output_file, index=False)\n",
     "    print(f\"Combined CSV saved to {output_file}\")\n",
     "csv_files=[]\n",
-    "for i in range(1,19):\n",
+    "for i in range(1,31):\n",
     "    csv_files.append('mlsimdata'+str(i)+'.csv')\n",
     "\n",
     "# Output file where the combined CSV will be saved\n",
-    "output_file = 'combined_file_paths.csv'\n",
+    "output_file = 'density.csv'\n",
     "\n",
     "# Call the function to combine the CSV files\n",
     "combine_csv_files(csv_files, output_file)\n"
