--- a/misc.ipynb
+++ b/misc.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,18 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "UNet3D.__init__() got an unexpected keyword argument 'base_channels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m UNet3D(block\u001b[38;5;241m=\u001b[39mBasicBlock, num_layers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, base_channels\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m64\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: UNet3D.__init__() got an unexpected keyword argument 'base_channels'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial conv output channels: 64\n"
      ]
     }
    ],
@@ -287,9 +283,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After initial conv: torch.Size([1, 64, 32, 32, 32])\n",
+      "After encoder compression 0: torch.Size([1, 128, 16, 16, 16])\n",
+      "After encoder non-compression 0: torch.Size([1, 128, 16, 16, 16])\n",
+      "After encoder compression 1: torch.Size([1, 256, 8, 8, 8])\n",
+      "After encoder non-compression 1: torch.Size([1, 256, 8, 8, 8])\n",
+      "After encoder compression 2: torch.Size([1, 512, 4, 4, 4])\n",
+      "After encoder non-compression 2: torch.Size([1, 512, 4, 4, 4])\n",
+      "After periodic padding before transpose conv 0: torch.Size([1, 512, 5, 5, 5])\n",
+      "After transpose conv 0: torch.Size([1, 256, 11, 11, 11])\n",
+      "After cropping 0: torch.Size([1, 256, 8, 8, 8])\n",
+      "After BatchNorm and ReLU 0: torch.Size([1, 256, 8, 8, 8])\n",
+      "After concatenation 0: torch.Size([1, 512, 8, 8, 8])\n",
+      "After decoder non-compression 0: torch.Size([1, 256, 8, 8, 8])\n",
+      "After periodic padding before transpose conv 1: torch.Size([1, 256, 9, 9, 9])\n",
+      "After transpose conv 1: torch.Size([1, 128, 19, 19, 19])\n",
+      "After cropping 1: torch.Size([1, 128, 16, 16, 16])\n",
+      "After BatchNorm and ReLU 1: torch.Size([1, 128, 16, 16, 16])\n",
+      "After concatenation 1: torch.Size([1, 256, 16, 16, 16])\n",
+      "After decoder non-compression 1: torch.Size([1, 128, 16, 16, 16])\n",
+      "After periodic padding before transpose conv 2: torch.Size([1, 128, 17, 17, 17])\n",
+      "After transpose conv 2: torch.Size([1, 64, 35, 35, 35])\n",
+      "After cropping 2: torch.Size([1, 64, 32, 32, 32])\n",
+      "After BatchNorm and ReLU 2: torch.Size([1, 64, 32, 32, 32])\n",
+      "After concatenation 2: torch.Size([1, 128, 32, 32, 32])\n",
+      "After decoder non-compression 2: torch.Size([1, 64, 32, 32, 32])\n",
+      "Final output shape: torch.Size([1, 3, 32, 32, 32])\n"
+     ]
+    }
+   ],
    "source": [
     "input_shape = (1, 3, 32, 32, 32)  # Change the dimensions as needed\n",
     "input_tensor = torch.rand(input_shape)  # Create a random input tensor\n",
@@ -5299,10 +5328,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/ckwan1/.conda/envs/d3m/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datapile import HuggingfaceLoader\n",
+    "data = HuggingfaceLoader(\n",
+    "    dataset_path=\"/home/user/ckwan1/ml/huggingface_dataset\", \n",
+    "    batch_size=1, \n",
+    "    shuffle=False,\n",
+    "    num_workers=1,\n",
+    ")\n",
+    "data.setup(\"validation\")\n",
+    "val_iter = iter(data.val_dataloader())\n",
+    "batch = next(val_iter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x,y=batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 4, 32, 32, 32])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataloader._MultiProcessingDataLoaderIter at 0x79fc11286e70>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_iter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 32, 32, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "d = np.load('/home/user/ckwan1/ml/fastpm-master/mlsim/data_collection/mlsimdata_npy2_density/mlsimdata1/213864.npy')\n",
+    "print(np.expand_dims(d[0], axis=0).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 32, 32, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = np.load('/home/user/ckwan1/ml/data_collection/mlsimdata_npy2/mlsimdata1/213864.npy')\n",
+    "d1 = np.einsum('ijkl->lijk', d1)\n",
+    "print(d1[0:3].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 32, 32, 32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((np.expand_dims(d[0], axis=0),d1[0:3])).shape"
+   ]
   }
  ],
  "metadata": {
