--- a/gen_path.ipynb
+++ b/gen_path.ipynb
@@ -9,36 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All file paths have been saved to mlsimdata1.csv\n",
-      "All file paths have been saved to mlsimdata2.csv\n",
-      "All file paths have been saved to mlsimdata3.csv\n",
-      "All file paths have been saved to mlsimdata4.csv\n",
-      "All file paths have been saved to mlsimdata5.csv\n",
-      "All file paths have been saved to mlsimdata6.csv\n",
-      "All file paths have been saved to mlsimdata7.csv\n",
-      "All file paths have been saved to mlsimdata8.csv\n",
-      "All file paths have been saved to mlsimdata9.csv\n",
-      "All file paths have been saved to mlsimdata10.csv\n",
-      "All file paths have been saved to mlsimdata11.csv\n",
-      "All file paths have been saved to mlsimdata12.csv\n",
-      "All file paths have been saved to mlsimdata13.csv\n",
-      "All file paths have been saved to mlsimdata14.csv\n",
-      "All file paths have been saved to mlsimdata15.csv\n",
-      "All file paths have been saved to mlsimdata16.csv\n",
-      "All file paths have been saved to mlsimdata17.csv\n",
-      "All file paths have been saved to mlsimdata18.csv\n",
       "All file paths have been saved to mlsimdata19.csv\n",
-      "All file paths have been saved to mlsimdata20.csv\n",
-      "All file paths have been saved to mlsimdata21.csv\n",
-      "All file paths have been saved to mlsimdata22.csv\n",
-      "All file paths have been saved to mlsimdata23.csv\n",
-      "All file paths have been saved to mlsimdata24.csv\n",
-      "All file paths have been saved to mlsimdata25.csv\n",
-      "All file paths have been saved to mlsimdata26.csv\n",
-      "All file paths have been saved to mlsimdata27.csv\n",
-      "All file paths have been saved to mlsimdata28.csv\n",
-      "All file paths have been saved to mlsimdata29.csv\n",
-      "All file paths have been saved to mlsimdata30.csv\n"
+      "All file paths have been saved to mlsimdata20.csv\n"
      ]
     }
    ],
@@ -63,9 +35,9 @@
     "        for path in file_paths:\n",
     "            writer.writerow([path])\n",
     "\n",
-    "for i in range(1,31):\n",
+    "for i in range(19,21):\n",
     "    # Cell to interact with the user\n",
-    "    directory = 'fastpm-master/mlsim/data_collection/mlsimdata_npy2_density/mlsimdata'+str(i)\n",
+    "    directory = 'mlsimdata_npy2_128/128ncmlsimdata'+str(i)\n",
     "    # Get all file paths\n",
     "    file_paths = find_all_files(directory)\n",
     "\n",
@@ -129,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined CSV saved to density.csv\n"
+      "Combined CSV saved to 128val.csv\n"
      ]
     }
    ],
@@ -156,11 +128,11 @@
     "    combined_df.to_csv(output_file, index=False)\n",
     "    print(f\"Combined CSV saved to {output_file}\")\n",
     "csv_files=[]\n",
-    "for i in range(1,31):\n",
+    "for i in range(19,21):\n",
     "    csv_files.append('mlsimdata'+str(i)+'.csv')\n",
     "\n",
     "# Output file where the combined CSV will be saved\n",
-    "output_file = 'density.csv'\n",
+    "output_file = '128val.csv'\n",
     "\n",
     "# Call the function to combine the CSV files\n",
     "combine_csv_files(csv_files, output_file)\n"
@@ -169,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d3m",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
